fix contrast colors

--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -2,6 +2,6 @@ $colors: (
   status: (
     success: #20d18b,
     error: #f44336,
-    info: #1a8ec7,
+    info: #1c97d4,
   ),
 );
