--- a/src/sass/components/_jobs.scss
+++ b/src/sass/components/_jobs.scss
@@ -64,16 +64,16 @@
     color: #f59e0b;
   }
   .html {
-    color: #e34c26;
+    color: #e76646;
   }
   .css {
     color: #3c99dc;
   }
   .php {
-    color: #f05340;
+    color: #f25645;
   }
   .mysql {
-    color: #00758f;
+    color: #009ec2;
   }
   .react {
     color: #61dbfb;
@@ -88,13 +88,13 @@
     color: #fb70a9;
   }
   .wp {
-    color: #21759b;
+    color: #2c9bce;
   }
   .joomla {
-    color: #f44321;
+    color: #f65737;
   }
   .java {
-    color: #ed1d25;
+    color: #f25a5f;
   }
   .pli {
     color: #ccd6e0;
